feat: cobertura de testes para o cliente-service